--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -1,8 +1,11 @@
+$footer-background-color: rgb(11, 53, 0);
+
 @import '../../../node_modules/bulma/bulma';
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 body, * {
     font-family: 'Roboto', sans-serif;
 }
+
 @import 'swgoh';
 
 
