--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -3,138 +3,26 @@ $footer-background-color: rgb(11, 53, 0);
 @import '../../../node_modules/bulma/bulma';
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 body, * {
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 @import 'swgoh';
-
-
-.territory-battle {
-    .map {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        & > div {
-            border: 1px solid #ccc;
-            box-sizing: border-box;
-            & > div {
-                border: none;
-                border-bottom: 1px solid #ccc;
-                height: 200px;
-                width: 24vw;
-                padding: 5px;
-                display: flex;
-                align-items: flex-start;
-                justify-content: center;
-                flex-direction: column;
-                &:last-child {
-                    border-bottom: none;
-                }
-            }
-        }
-    }
-    .modal {
-        &:before {
-            display: none;
-        }
-    }
-    .label {
-        color: #333;
-    }
-    .text {
-        p {
-            margin-bottom: 0;
-            display: flex;
-        }
-        .star {
-            width:15px;
-            height:15px;
-            color:#000;
-            background:center 0 transparent url(https://swgoh.gg/static/img/star.png) no-repeat;
-            background-size:100%;
-            position: static;
-            margin-left: 3px;
-        }
-    }
-}
-
 svg {
-    width: 100%;
+  width: 100%;
+}
+.navbar-brand {
+  .navbar-item {
+    padding: 0;
+    img {
+      max-height: 100%;
+      height: 52px;
+    }
+  }
 }
 
-.loading {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.4);
-    z-index: 99999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    .letter {
-      animation-name: loadingAnnimation;
-      animation-duration: 1.6s;
-      animation-iteration-count: infinite;
-      animation-direction: linear;
-      float: left;
-      font-size: 22px;
-      color: #333;
-    }
-  
-    .load-wrapp {
-      width: 320px;
-      height: 100px;
-      padding: 20px 20px 20px;
-      border-radius: 5px;
-      text-align: center;
-      background-color: #e5e5e5;
-    }
-  
-    .letter-holder {
-      padding: 16px;
-      display: flex;
-      justify-content: center;
-    }
-    .l-1 {
-      animation-delay: 0.48s;
-    }
-    .l-2 {
-      animation-delay: 0.6s;
-    }
-    .l-3 {
-      animation-delay: 0.72s;
-    }
-    .l-4 {
-      animation-delay: 0.84s;
-    }
-    .l-5 {
-      animation-delay: 0.96s;
-    }
-    .l-6 {
-      animation-delay: 1.08s;
-    }
-    .l-7 {
-      animation-delay: 1.2s;
-    }
-    .l-8 {
-      animation-delay: 1.32s;
-    }
-    .l-9 {
-      animation-delay: 1.44s;
-    }
-    .l-10 {
-      animation-delay: 1.56s;
-    }
-  }
-  
-  @keyframes loadingAnnimation {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
+
+@import 'loading';
+@import 'territorybattle';
+@import 'territorywar';
+
+@import 'dark';
