--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -25,4 +25,44 @@ svg {
 @import 'territorybattle';
 @import 'territorywar';
 
+.collection-char {
+  position: relative;
+  width: 104px;
+  padding: 10px;
+}
+.unit {
+  display: flex;
+  .unit-stats {
+    padding: 10px 0;
+    margin-left: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  &.is-full {
+    justify-content: flex-end;
+  }
+  &.is-counter {
+    flex-direction: row-reverse;
+    .unit-stats {
+      align-items: flex-end;
+      margin-left: 0px;
+      margin-right: 10px;
+    }
+  }
+  @include mobile {
+    display: block;
+    .unit-stats {
+      padding-top: 0;
+      margin-left: 0px;
+      font-size: 12px;
+      justify-content: center;
+      align-items: flex-start;
+      flex-direction: column;
+    }
+  }
+}
+
 @import 'dark';
+
